tests/baselines/reference/augmentedTypesClass2a.errors.txt
==== tests/cases/compiler/augmentedTypesClass2a.ts (2 errors) ====
    //// class then function
    class c2 { public foo() { } }
    function c2() { } // error
             ~~
!!! error TS2300: Duplicate identifier 'c2'.
    var c2 = () => { }
        ~~
!!! error TS2300: Duplicate identifier 'c2'.